src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM208_SIM208.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    DoubleNegation: a
  location:
    row: 1
    column: 12
  end_location:
    row: 1
    column: 13
  fix:
    content: a
    location:
      row: 1
      column: 3
    end_location:
      row: 1
      column: 14
  parent: ~
- kind:
    DoubleNegation: a == b
  location:
    row: 4
    column: 13
  end_location:
    row: 4
    column: 19
  fix:
    content: a == b
    location:
      row: 4
      column: 3
    end_location:
      row: 4
      column: 21
  parent: ~

