src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM210_SIM210.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    IfExprWithTrueFalse:
      expr: b
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 24
  fix:
    content:
      - bool(b)
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 24
  parent: ~
- kind:
    IfExprWithTrueFalse:
      expr: b != c
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 29
  fix:
    content:
      - b != c
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 29
  parent: ~
- kind:
    IfExprWithTrueFalse:
      expr: b + c
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 28
  fix:
    content:
      - bool(b + c)
    location:
      row: 5
      column: 4
    end_location:
      row: 5
      column: 28
  parent: ~
- kind:
    IfExprWithTrueFalse:
      expr: b
  location:
    row: 12
    column: 4
  end_location:
    row: 12
    column: 24
  fix: ~
  parent: ~

