src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM220_SIM220.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    AAndNotA: a
  location:
    row: 1
    column: 3
  end_location:
    row: 1
    column: 14
  fix:
    content: "False"
    location:
      row: 1
      column: 3
    end_location:
      row: 1
      column: 14
  parent: ~
- kind:
    AAndNotA: a
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 15
  fix:
    content: "False"
    location:
      row: 4
      column: 4
    end_location:
      row: 4
      column: 15
  parent: ~
- kind:
    AAndNotA: a
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 15
  fix:
    content: "False"
    location:
      row: 7
      column: 4
    end_location:
      row: 7
      column: 15
  parent: ~

