src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM300_SIM300.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    YodaConditions:
      variable: compare
      constant: "\"yoda\""
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 17
  fix:
    content: "compare == \"yoda\""
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 17
  parent: ~
- kind:
    YodaConditions:
      variable: compare
      constant: "'yoda'"
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 17
  fix:
    content: "compare == 'yoda'"
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 17
  parent: ~
- kind:
    YodaConditions:
      variable: age
      constant: "42"
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 9
  fix:
    content: age == 42
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 9
  parent: ~

