src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM401_SIM401.py.snap
---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    DictGetWithDefault: "var = a_dict.get(key, \"default1\")"
  location:
    row: 6
    column: 0
  end_location:
    row: 9
    column: 20
  fix:
    content: "var = a_dict.get(key, \"default1\")"
    location:
      row: 6
      column: 0
    end_location:
      row: 9
      column: 20
  parent: ~
- kind:
    DictGetWithDefault: "var = a_dict.get(key, \"default2\")"
  location:
    row: 12
    column: 0
  end_location:
    row: 15
    column: 21
  fix:
    content: "var = a_dict.get(key, \"default2\")"
    location:
      row: 12
      column: 0
    end_location:
      row: 15
      column: 21
  parent: ~
- kind:
    DictGetWithDefault: "var = a_dict.get(key, val1 + val2)"
  location:
    row: 18
    column: 0
  end_location:
    row: 21
    column: 21
  fix:
    content: "var = a_dict.get(key, val1 + val2)"
    location:
      row: 18
      column: 0
    end_location:
      row: 21
      column: 21
  parent: ~
- kind:
    DictGetWithDefault: "var = a_dict.get(keys[idx], \"default\")"
  location:
    row: 24
    column: 0
  end_location:
    row: 27
    column: 19
  fix:
    content: "var = a_dict.get(keys[idx], \"default\")"
    location:
      row: 24
      column: 0
    end_location:
      row: 27
      column: 19
  parent: ~
- kind:
    DictGetWithDefault: "var = dicts[idx].get(key, \"default\")"
  location:
    row: 30
    column: 0
  end_location:
    row: 33
    column: 19
  fix:
    content: "var = dicts[idx].get(key, \"default\")"
    location:
      row: 30
      column: 0
    end_location:
      row: 33
      column: 19
  parent: ~
- kind:
    DictGetWithDefault: "vars[idx] = a_dict.get(key, \"default\")"
  location:
    row: 36
    column: 0
  end_location:
    row: 39
    column: 25
  fix:
    content: "vars[idx] = a_dict.get(key, \"default\")"
    location:
      row: 36
      column: 0
    end_location:
      row: 39
      column: 25
  parent: ~

